# backend/src/common/interfaces/list-response.interface.ts
@@ -1,0 +1,6 @@
+export interface ListResponseData<T> {
+  items: T[];
+  count: number;
+  page: number;
+  nextPage: number | null;
+}
