# backend/src/projects/dto/create-project.response.dto.ts
@@ -1,0 +1,3 @@
+import { ProjectEntity } from '../entities/project.entity';
+
+export class CreateProjectResponseDto extends ProjectEntity {}
